Respond to insepction-driven warnings and suggestions